# Smart-Router-Environment

./: .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  plot_rewards.py  pyproject.toml  requirements.txt  run_agent.py  train_template.py
server/: Dockerfile  __init__.py  app.py  curriculum.py  judge.py  llm_client.py  smart_router_environment.py  topology.py  traffic_engine.py
